# kapi

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.sh
apps/trello/: admin.py  apps.py  models.py  schema.py
apps/trello/migrations/: 0001_initial.py  0002_alter_column_id_alter_task_id.py  0003_alter_column_id_alter_task_id.py  0004_rename_id_column_columid_rename_id_task_task_id.py  0005_rename_columid_column_column_id.py  0006_column_created_at_column_updated_at_task_created_at_and_more.py
config/: asgi.py  settings.py  urls.py  wsgi.py
